style: Improve UI design and localize strings
Refactors the UI layer to enhance the visual design, adds animations, and externalizes hardcoded strings to `strings.xml`. The changes also introduce a more comprehensive color system and updated typography.

**UI and Design Layer:**
- **LaunchCard:** Redesigns the card with rounded corners, improved elevation, and a new `StatusPill` component. Adds a gradient placeholder for missing images and improves text layout using `Row` and `Weight` modifiers.
- **LaunchesScreen:** Adds a linear gradient background and implements `AnimatedContent` for smoother transitions between Loading, Error, and Success states.
- **Animations:** Introduces staggered entrance animations for list items using `AnimatedVisibility` and `LaunchedEffect` with delays.
- **TopBar:** Updates the `TopAppBar` with a subtitle and a `FilledTonalIconButton` for the refresh action.
- **Theme:** Completely overhauls `Color.kt` with a full Material 3 color palette for both light and dark modes. Updates `Typography.kt` to use specific Serif and SansSerif font families for headlines and body text.

**Localization and Data Handling:**
- Externalizes all UI strings to `strings.xml`, including status prefixes, error messages, and time formatting patterns.
- Refactors `LaunchesViewModel` to use `@ApplicationContext` for localized string retrieval during UI state mapping.
- Updates time relative formatting and countdown logic to use localized string resources (e.g., "%dm ago", "Launched").

**Components and Refinement:**
- Adds a `LastUpdatedChip` to display data freshness.
- Improves the `OfflineBanner` styling with rounded corners and tertiary container colors.
- Refines `LoadingState` and `ErrorState` with better alignment and localized retry buttons.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,36 @@
 <resources>
     <string name="app_name">Delta-V</string>
+    <string name="upcoming_launches">Upcoming launches</string>
+
+    <!-- Launches Screen -->
+    <string name="refresh_launches_content_description">Refresh launches</string>
+    <string name="offline_mode">Offline mode</string>
+    <string name="offline_message">You\'re seeing cached data. Tap refresh when you\'re back online.</string>
+    <string name="try_again">Try again</string>
+    <string name="retry">Retry</string>
+    <string name="unable_to_load_launches">Unable to load launches right now.</string>
+    <string name="no_cached_launches">No cached launches yet. Reconnect and try again.</string>
+    <string name="updated_prefix">Updated %s</string>
+    <string name="updated_just_now">Updated just now</string>
+
+    <!-- Launch Card -->
+    <string name="status_prefix">Status: %s</string>
+    <string name="mission_details">Mission details</string>
+    <string name="image_unavailable">Image unavailable</string>
+
+    <!-- Launch Data Defaults -->
+    <string name="launch_window_tbd">Launch window TBD</string>
+    <string name="location_tbd">Location TBD</string>
+    <string name="mission_summary_default">Mission details will be announced closer to launch.</string>
+    <string name="status_tbd">TBD</string>
+    <string name="upcoming_mission">Upcoming Mission</string>
+    <string name="launch_provider_tba">Launch provider TBA</string>
+    <string name="launch_time_tbd">Launch time TBD</string>
+    <string name="launched">Launched</string>
+
+    <!-- Time Formatting -->
+    <string name="just_now">just now</string>
+    <string name="minutes_ago">%dm ago</string>
+    <string name="hours_ago">%dh ago</string>
+    <string name="days_ago">%dd ago</string>
 </resources>
